--- a/style.css
+++ b/style.css
@@ -7,3 +7,26 @@ body {
     color: #ffffff;
     padding: 10px;
 }
+
+#game {
+    max-width: 500px;
+    max-height: 400px;
+    background-color: #ffffff;
+    color: #ffffff;
+    margin: 30px auto 0 auto;
+    padding: 10px;
+}
+
+#controls, #stats {
+    border: 1px solid #0a0a23;
+    color: #0a0a23;
+    padding: 5px;
+}
+
+#monsterStats {
+    display: none;
+    border: 1px solid #0a0a23;
+    padding: 5px;
+    background-color: #c70d0d;
+    color: #ffffff;
+}
