--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ body {
     background-color: #c70d0d;
     color: #ffffff;
 }
+
+button {
+    cursor: pointer;
+    color: #0a0a23;
+    background-color: #feac32;
+    background-image: linear-gradient(#fecc4c, #ffac33);
+    border: 3px solid #feac32;
+}
